# starry-next

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  crates.js  debug.S  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  docs.yml
apps/libc/: Makefile  expect_off.out  test_cmd  testcase_list
apps/libc/c/sleep/: sleep.c
apps/libc/rust/helloworld/: Cargo.toml
apps/nimbos/: expect_off.out  test_cmd  testcase_list
apps/nimbos/c/: CMakeLists.txt
apps/nimbos/c/lib/: syscall_ids.h.no_x86.in
apps/nimbos/rust/: Cargo.toml  rust-toolchain.toml
apps/nimbos/rust/src/: syscall.rs
configs/: aarch64.toml  riscv64.toml  x86_64.toml
scripts/: app_test.sh  config.toml.temp  get_deps.sh  set_ax_root.sh
search.desc/starry/: starry-desc-0-.js
src/: config.rs  loader.rs  main.rs  mm.rs  syscall.rs  task.rs
src/starry/: loader.rs.html  main.rs.html  mm.rs.html  task.rs.html
src/starry/syscall_imp/: mod.rs.html  time.rs.html
src/starry/syscall_imp/fs/: ctl.rs.html  io.rs.html  mod.rs.html
src/starry/syscall_imp/mm/: mmap.rs.html  mod.rs.html
src/starry/syscall_imp/task/: mod.rs.html  schedule.rs.html  thread.rs.html
src/syscall_imp/: mod.rs  time.rs
src/syscall_imp/fs/: ctl.rs  io.rs  mod.rs
src/syscall_imp/mm/: mmap.rs  mod.rs
src/syscall_imp/task/: mod.rs  schedule.rs  task.rs  thread.rs
starry/: all.html  fn.main.html  index.html  macro.syscall_body!.html  macro.syscall_body.html  sidebar-items.js
starry/config/: constant.KERNEL_STACK_SIZE.html  constant.USER_SPACE_BASE.html  constant.USER_SPACE_SIZE.html  constant.USER_STACK_SIZE.html  constant.USER_STACK_TOP.html  index.html  sidebar-items.js
starry/loader/: fn._app_count.html  fn.get_app_count.html  fn.get_app_data.html  fn.get_app_data_by_name.html  fn.get_app_name.html  fn.list_apps.html  fn.load_elf.html  index.html  sidebar-items.js  struct.ELFInfo.html  struct.ELFSegment.html
starry/mm/: fn.handle_page_fault.html  fn.load_user_app.html  index.html  sidebar-items.js  static._LINKME_ELEMENT_handle_page_fault.html
starry/syscall_imp/: fn.handle_syscall.html  index.html  sidebar-items.js  static._LINKME_ELEMENT_handle_syscall.html
starry/syscall_imp/fs/: index.html  sidebar-items.js
starry/syscall_imp/fs/ctl/: fn.sys_ioctl.html  index.html  sidebar-items.js
starry/syscall_imp/fs/io/: fn.sys_read.html  fn.sys_write.html  (+3 more)
starry/syscall_imp/mm/: index.html  sidebar-items.js
starry/syscall_imp/task/: index.html  sidebar-items.js
starry/syscall_imp/time/: fn.sys_clock_gettime.html  index.html  sidebar-items.js
starry/task/: fn.spawn_user_task.html  index.html  sidebar-items.js  static.__AX_TASK_EXT_ALIGN.html  static.__AX_TASK_EXT_SIZE.html  struct.TaskExt.html
trait.impl/axtask/task_ext/: trait.TaskExtMut.js  trait.TaskExtRef.js
trait.impl/bitflags/traits/: trait.Flags.js  trait.PublicFlags.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js  trait.TryFrom.js
trait.impl/core/fmt/: trait.Binary.js  trait.Debug.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/num_enum/: trait.TryFromPrimitive.js
(+35 files in other folders)
