[package]
name = "starry"
version = "0.1.0"
edition = "2021"
authors = ["Azure-stars <Azure_stars@126.com>", "Yuekai Jia <equation618@gmail.com>"]
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/starry-next"

[dependencies]
log = "0.4"
linkme = "0.3"
axerrno = "0.1"
memory_addr = "0.3"
xmas-elf = "0.9"
bitflags = "2.6"

axstd = { git = "https://github.com/arceos-org/arceos.git", features = ["paging"] }
arceos_posix_api = { git = "https://github.com/arceos-org/arceos.git" }
elf_parser = { git = "https://github.com/Starry-OS/elf-parser.git" }
numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }

axhal = { git = "https://github.com/arceos-org/arceos.git", features = ["uspace"] }
axmm = { git = "https://github.com/arceos-org/arceos.git" }
axtask = { git = "https://github.com/arceos-org/arceos.git" }
axsync = { git = "https://github.com/arceos-org/arceos.git" }
axruntime = { git = "https://github.com/arceos-org/arceos.git", features = ["multitask"] }
